--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <marquee> <h1>Welcome to my Website</h1></marquee>
     </section>
     <section class="project-1">
-        <div class="project-item" style="background-image: url('images/1.jpg');">
+        <div class="project-item" style="background-image:url('images/1.jpg');">
             
         </div>
-        <div class="project-item" style="background-image: url('images/2.jpg');">
+        <div class="project-item" style="background-image:url('images/2.jpg');">
         </div>
         <div class="project-item" style="background-image:url('images/3.jpg')">
             
@@ -34,8 +34,8 @@
             <p> Email: bgc.sadiya@gmail.com</p>
            </div>
            <div class="footer">
-             <a href="facebook" class="link">facebook</a>
-             <a href="blog" class="link">Blog</a>
+             <a href="#" class="link">facebook</a>
+             <a href="#" class="link">Blog</a>
            </div>
            <div class="footer">
             <p> Others</p>
